<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@drawable/dialog_background">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_comment"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_comment"
        tools:layout_editor_absoluteX="67dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commentInput"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:textColor="@color/primary"
            android:maxLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:icon="@drawable/ic_send"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toStartOf="@id/cancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/cancel"
        app:strokeColor="@color/primary"
        app:strokeWidth="1dp"
        app:icon="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/submitButton"
        app:layout_constraintTop_toTopOf="@id/submitButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>
